i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.9.x/intro.md
---
sidebar_position: 1
description: Gitti 是一个快速、轻量、键盘驱动的 Git 终端 UI（TUI）。了解其布局、面板，以及如何在终端中开始管理分支、文件和提交。
keywords:
  - gitti
  - git tui
  - git ui
  - 终端 git 客户端
  - 键盘驱动 git
  - git 终端 ui
  - git 工作流
---

# 简介

**Gitti** 是一个快速、轻量级的 Git 操作终端 UI。它专为保持您的工作流而设计，通过键盘驱动的界面来执行常见的 Git 任务。

## 核心理念

Gitti 围绕三个主要组件构建：

1.  **本地分支 / 标签 / 远程 / Worktree (Local Branches / Tags / Remotes / Worktree)** (左上) — 使用 `< / >` 切换
2.  **修改的文件 (Modified Files)** (左中)
3.  **提交日志 / RefLog (Commit Log / RefLog)** (左下) — 使用 `< / >` 切换
4.  **暂存区 (Stash)** (左下)
5.  **日志面板 (Logging Panel)** (右下)

**详细视图 (Detail View)** (右侧面板) 会根据您的选择上下文进行更新。

## 全局导航

| 键          | 动作                     |
| :---------- | :----------------------- |
| `1`         | 切换焦点到**本地分支**   |
| `2`         | 切换焦点到**修改的文件** |
| `3`         | 切换焦点到**提交日志 / RefLog**   |
| `4`         | 切换焦点到**暂存区**     |
| `/`         | 切换焦点到**日志面板**   |
| `tab`       | 向前切换组件             |
| `shift+tab` | 向后切换组件             |
| `F`         | 筛选当前聚焦的列表面板   |
| `?`         | 打开全局快捷键帮助       |

## 列表筛选

在**本地分支 / 标签 / 远程 / Worktree**、**修改的文件**、**提交日志 / RefLog** 或 **Stash** 面板中按 `F` 可筛选该列表。输入内容以缩小列表，按 `enter` 保留筛选，按 `esc` 清除筛选。每个列表保留各自的筛选内容。完整说明请参阅[列表筛选](./keybindings.md#列表筛选)。

## 鼠标支持

Gitti 也支持鼠标操作。左键点击面板可聚焦该面板，左键点击列表项可选中该项，使用滚轮可滚动详细面板和弹出窗口内容。完整说明请参阅[鼠标支持](./keybindings.md#鼠标支持)。

## 快速开始 {#getting-started}

1.  打开您的终端。
2.  导航到一个 Git 仓库。
3.  运行 `gitti`。

您将看到界面已填充了当前仓库的状态。使用数字键 (`1`, `2`, `3`, `4`) 在面板之间跳转。
